prefix radio buttons added to the contact form

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -640,6 +640,10 @@
             padding:0 !important;
         }
 
+        .prefix__radio label {
+            color: black;
+        }
+
         .contact__form__card {
           $contact_padding_v: 8px;
           $contact_width: 260px;
