--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -163,6 +163,25 @@
         }
     }
 
+    .wc-header-fullscreen {
+        max-width: 100%;
+    }
+
+    .wc-chatbot-content {
+        display: flex;
+        width: 100%;
+        height: 100%;
+    }
+
+    .wc-chatbot-content-left {
+        flex: 1;
+    }
+
+    .wc-chatbot-content-right {
+        flex: 2;
+        position: relative;
+    }
+
     .wc-time {
         color: $c_textLight;
         margin-bottom: 10px;
@@ -194,6 +213,10 @@
         &.no-header {
             top: 0;
         }
+    }
+
+    .wc-message-groups-fullscreen {
+        max-width: 100%;
     }
 
     .wc-message-group-content {
@@ -1306,6 +1329,10 @@
                 visibility: hidden;
             }
         }
+    }
+
+    .wc-console-fullscreen {
+        max-width: 100%;
     }
 
     .wc-console .wc-send svg .sendArrow {
