--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -442,14 +442,11 @@
             top: $headerTotalHeight;
             display:flex;
             flex-direction: column;
-            position:absolute;
             overflow-y: scroll;
             box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.12);
             border-radius: 3px 0px 3px 3px;
             border-top: 5px solid #3F6DE1;
             border-radius: 3px 3px 0px 0px;
-            margin: 30px 30px 0;
-
 
             &__message {
                 font-size: 14px;
@@ -741,6 +738,10 @@
 
     .wc-message-content audio+h1, .wc-message-content video+h1 {
         margin-top: 11px;
+    }
+
+    .wc-message-content-disclaimer {
+        padding: 0;
     }
 
     .wc-message-from {
