current state of css for fileupload card

--- a/src/scss/includes/file-upload.scss
+++ b/src/scss/includes/file-upload.scss
@@ -15,6 +15,8 @@ border-radius: 3px 3px 0px 3px;
   position: center;
   width: 98px;
   height: 22px;
+  left: 993px;
+  top: 349px;
   font-family: 'Lato';
   font-style: normal;
   font-weight: 700;
@@ -106,9 +108,10 @@ border-radius: 3px 3px 0px 3px;
 
 .upload-skip {
   position: center;
-  width: 387px;
+  width: 385.72px;
   height: 52px;
- 
+  left: 994.28px;
+  top: 602px;
 
   border: 1.5px solid #3F6DE1;
   border-radius: 3px;
