Started refactoring Dropzone for files

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -1022,9 +1022,9 @@
 
     .wc-message-from-me.wc-message-file .wc-message-content {
         background-color: transparent;
-        border: 1px solid #3F6DE1;
-        border-top-right-radius: 4px;
-        border-top-left-radius: 4px;
+        border-top: 5px solid #3F6DE1;
+        border-top-right-radius: 3px;
+        border-top-left-radius: 3px;
         padding: 0px; 
     }
 
