--- a/src/scss/includes/file-upload.scss
+++ b/src/scss/includes/file-upload.scss
@@ -29,11 +29,55 @@ border-radius: 3px 3px 0px 3px;
   color: #262626;
 }
 
+.file-upload-box {
+  flex: 1;
+  margin: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #F7F7F7;
+  border: 1.5px dashed #EBEBEB;
+  border-radius: 5px;
+  color:#262626;
+  outline: none;
+  padding: 30px;
+}
+
+.file-upload-icon {
+  margin-bottom: 15px;
+}
+
+.file-upload-choose-file {
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 19px;
+  letter-spacing: 0em;
+  text-align: center; 
+  width: 100%;
+}
+
+.file-upload-choose-file-subtext {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 19px;
+  letter-spacing: 0em;
+  text-align: center; 
+}
+
+.file-upload-supported-files {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
+  text-align: center;
+  color: #979797;
+  margin-top: 10px;
+}
+
 .wc-message-from-me{
     &.wc-message-file{
         .wc-message-content {
           width: 447px;
-          height: 350px;
          
            /* Gideon / White */
         
