--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -1025,7 +1025,7 @@
         border-top: 5px solid #3F6DE1;
         border-top-right-radius: 3px;
         border-top-left-radius: 3px;
-        padding: 0px; 
+        padding: 10px 0px 30px; 
     }
 
     .wc-message-from-me .wc-message-address {
