--- a/src/scss/includes/file-upload.scss
+++ b/src/scss/includes/file-upload.scss
@@ -31,7 +31,7 @@ border-radius: 3px 3px 0px 3px;
 
 .file-upload-box {
   flex: 1;
-  margin: 20px;
+  margin: 30px 30px 0px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -72,6 +72,36 @@ border-radius: 3px 3px 0px 3px;
   text-align: center;
   color: #979797;
   margin-top: 10px;
+}
+
+.uploaded-files-container {
+  padding: 20px 30px 0px;
+}
+
+.uploaded-files-text {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 19px;
+  color: #262626;
+}
+
+.listed-file {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.uploaded-file-name {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  color: #262626;
+}
+
+.remove-uploaded-file {
+  color: #3F6DE1;
 }
 
 .wc-message-from-me{
