Hide chatbar on mobile when disabled

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -1210,6 +1210,9 @@
 
         &__disabled {
             background-color: #eff0f1;
+            @include mobileAndTablet {
+                display: none;
+            }
         }  
 
         &__disabled::before {
