--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -682,6 +682,9 @@
           $contact_padding_v: 8px;
           $contact_width: 260px;
           width: $contact_width;
+          background-color: white;
+          color: black;
+          padding: 8px 16px;
 
           &__container {
             display: flex;
@@ -703,7 +706,8 @@
             &__title {
               margin: 0;
               padding-bottom: $contact_padding_v - 2px;
-              color: #3F6DE1;
+              color: black
+            //   color: #3F6DE1;
             }
 
             &__error {
@@ -714,9 +718,9 @@
           }
 
           &__submit {
-            width: 70%;
+            width: 100%;
             margin-top: $contact_padding_v;
-            margin-left:15%;
+            // margin-left:15%;
             height: 2em;
             border-radius: 6px; 
             border-width: 1px;
@@ -1050,7 +1054,14 @@
         border-radius: 3px 3px 0px 3px;
     }
 
-    .wc-message-from-me .wc-message-content-contact {
+    .wc-message-content-contact {
+        background-color: white;
+        color: black;
+        box-shadow: 0px 1px 10px $c_shadow;
+        padding: 5px 0px 0px 0px;
+    }
+
+    .wc-message-from-me {
       background-color:white;
       border-color:#3F6DE1;
       border-style:solid;
@@ -1120,6 +1131,7 @@
 
     .wc-message-contact {
       margin-left: auto;
+      border: none
     }
 
     .wc-message-imBack {
