--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -1068,6 +1068,7 @@
 
     .wc-message-from-me.wc-message-file .wc-message-content {
         background-color: transparent;
+        border: none;
         border-top: 5px solid #3F6DE1;
         border-top-right-radius: 3px;
         border-top-left-radius: 3px;
