--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -445,7 +445,7 @@
             display:flex;
             flex-direction: column;
             overflow-y: scroll;
-            box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.12);
+            box-shadow: 0px 1px 20px rgba(0, 0, 0, 0.2);
             border-radius: 3px 0px 3px 3px;
             border-top: 5px solid #3F6DE1;
             border-radius: 3px 3px 0px 0px;
@@ -1146,6 +1146,7 @@
 
     .wc-message-disclaimer {
         width: 100%;
+        margin-left: auto;
     }
 
     // Stuff for full screen that isn't working yet -TO 5/13
