--- a/src/scss/includes/file-upload.scss
+++ b/src/scss/includes/file-upload.scss
@@ -11,7 +11,7 @@ $gd_gideon_blue: #3F6DE1;
   border-radius: 3px 3px 0px 3px;
 }
 
-.file-upload-title{
+.file-upload-title {
   font-style: normal;
   font-weight: 700;
   font-size: 18px;
@@ -71,6 +71,12 @@ $gd_gideon_blue: #3F6DE1;
 
 .uploaded-files-container {
   padding: 20px 30px 0px;
+}
+
+.uploaded-file-name-readonly {
+  margin-left: 30px;
+  margin-top: 20px;
+  color: #262626;
 }
 
 .uploaded-files-text {
@@ -262,7 +268,6 @@ $gd_gideon_blue: #3F6DE1;
   background: #3F6DE1;
   border-radius: 3px;
 
-  font-family: 'Lato';
   font-style: normal;
   font-weight: 600;
   font-size: 18px;
