--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -677,6 +677,7 @@
         .prefix__radio {
             display: block;
             position: relative;
+            margin-top: 5px;
         }
 
         .prefix__radio label {
@@ -693,14 +694,23 @@
             background-color: #ccc;
         }
 
-        .prefix_label input:checked ~ .checkmark {
-            background-color: #2196F3;
-        }
-
-        .checkmark:after {
+        .checkmark::after {
             content: "";
             position: absolute;
             display: none;
+        }
+
+        .prefix_label input:checked ~ .checkmark::after {
+            display: block;
+        }
+
+        .prefix_label .checkmark::after {
+            border-radius: 50%;
+            background: #3F6DE1;
+            height: 9px;
+            width: 9px;
+            top: 2.5px;
+            left: 2px;
         }
 
         .prefix_text {
@@ -711,13 +721,14 @@
             position: absolute;
             height: 15px;
             width: 15px;
-            background-color: #eee;
+            background-color: #F7F7F7;
+            border: 1px solid #EBEBEB;
             border-radius: 50%;
             margin-left: 3px;
         }
 
         .contact_label {
-            margin-bottom: 15px;
+            margin-bottom: 20px;
         }
 
         .contact__form__card {
@@ -731,7 +742,7 @@
           &__container {
             display: flex;
             flex-direction: column;
-            padding-bottom: $contact_padding_v + 6px;
+            padding-bottom: $contact_padding_v + 10px;
 
             &__input {
               width: 100%;
@@ -749,20 +760,20 @@
             &__title {
               margin: 0;
               padding-bottom: $contact_padding_v - 2px;
-              color: black
+              color: #262626;
+              font-weight: 500;
             //   color: #3F6DE1;
             }
 
             &__error {
               padding-top: 6px;
-              color: red;
+              color: #FF002E;
               font-size: 12px;
             }
           }
 
           &__submit {
             width: 100%;
-            margin-top: $contact_padding_v;
             // margin-left:15%;
             height: 3em;
             border-radius: 2px; 
@@ -780,7 +791,7 @@
       }
 
     .required {
-        color: red
+        color: #FF002E
     }
 
     .wc-message-content.clickable {
