--- a/src/scss/includes/file-upload.scss
+++ b/src/scss/includes/file-upload.scss
@@ -18,12 +18,11 @@ $gd_gideon_blue: #3F6DE1;
   line-height: 22px;
   letter-spacing: 0.04em;
   color: #262626;
-  margin-left: 30px;
 }
 
 .file-upload-box {
   flex: 1;
-  margin: 30px 30px 0px;
+  margin: 30px 0px 0px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -70,11 +69,10 @@ $gd_gideon_blue: #3F6DE1;
 }
 
 .uploaded-files-container {
-  padding: 20px 30px 0px;
+  padding: 20px 0px 0px;
 }
 
 .uploaded-file-name-readonly {
-  margin-left: 30px;
   margin-top: 20px;
   color: #262626;
 }
@@ -208,15 +206,6 @@ $gd_gideon_blue: #3F6DE1;
 }
 
 .upload-skip {
-  position: center;
-  width: 385.72px;
-  height: 52px;
-  left: 994.28px;
-  top: 602px;
-
-  border: 1.5px solid #3F6DE1;
-  border-radius: 3px;
-
   font-family: 'Lato';
   font-style: normal;
   font-weight: 600;
@@ -224,23 +213,19 @@ $gd_gideon_blue: #3F6DE1;
   line-height: 22px;
   display: flex;
   align-items: center;
+  justify-content: center;
   text-align: center;
-  
-  /* Gideon / Primary color */
-
   color: $gd_gideon_blue;
-  text-align: center;
   padding: 14px 0px;
-  border-top: 1px solid $gd_gideon_blue;
+  border: 1.5px solid $gd_gideon_blue;
+  border-radius: 3px;
   cursor: pointer;
-    
+  margin-top: 20px;
 }
 
 .uploaded-files {
   width: 211px;
   height: 17px;
-  
-
   font-family: 'Lato';
   font-style: normal;
   font-weight: 400;
