--- a/src/scss/includes/file-upload.scss
+++ b/src/scss/includes/file-upload.scss
@@ -101,7 +101,12 @@ $gd_gideon_blue: #3F6DE1;
 
 .remove-uploaded-file {
   color: #3F6DE1;
+}
 
+.remove-uploaded-file:hover {
+  cursor: pointer;
+  opacity: 0.8;
+}
 // .file-upload-title{
 //     background-color: $gd_gideon_blue;
 //     font-size: 14px;
@@ -119,13 +124,11 @@ $gd_gideon_blue: #3F6DE1;
 //     display: flex;    
 //     align-items: center;    
 //     justify-content: center;
-    
-}
 
 .wc-message-from-me{
     &.wc-message-file{
         .wc-message-content {
-          width: 447px;
+          // width: 447px;
          
            /* Gideon / White */
         
