--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -1114,7 +1114,7 @@
     .wc-message-content-contact {
         background-color: white;
         color: black;
-        box-shadow: 0px 1px 10px $c_shadow;
+        box-shadow: $gideon-shadow;
         padding: 5px 0px 0px 0px;
     }
 
