--- a/src/scss/gideon.scss
+++ b/src/scss/gideon.scss
@@ -25,6 +25,11 @@ $gideon-silver-two: #c3ccd0;
 $gideon-light-border-color: #e6eaee;
 
 
+// SIZES
+
+$gideon-node-width: 66%;
+
+
 // EFFECTS
 
 // shadow
