--- a/src/scss/includes/date-picker.scss
+++ b/src/scss/includes/date-picker.scss
@@ -13,8 +13,8 @@ $gd_gideon_blue: #3F6DE1;
 $width: 280px;
 
 .gd-date-picker {
-    width: $width;
-    max-width: $width;
+    // width: $width;
+    // max-width: $width;
 
     padding:2px;
 
@@ -478,9 +478,9 @@ $width: 280px;
         content: ' ';
         background-color: #D8E2F9;
         position: absolute;
-        width: 3.5rem;
+        width: 5.6rem;
         height: 1.7rem;
-        transform: translateX(-2.0rem);
+        transform: translateX(-3.0rem);
         z-index: -1;
     }
 
@@ -493,7 +493,7 @@ $width: 280px;
     }
 
     .react-datepicker__day--in-range:not(.react-datepicker__day--range-start):not(.react-datepicker__day--range-end).react-datepicker__day--sat::after {
-        width: 2.4rem;
+        width: 3.3rem;
     }
 
     [aria-label="day-1"].react-datepicker__day--in-range:not(.react-datepicker__day--range-start):not(.react-datepicker__day--range-end).react-datepicker__day--sun::after,
@@ -517,7 +517,7 @@ $width: 280px;
     [aria-label="day-7"].react-datepicker__day--in-range:not(.react-datepicker__day--range-start):not(.react-datepicker__day--range-end).react-datepicker__day--sat::after,
     [aria-label="day-8"].react-datepicker__day--in-range:not(.react-datepicker__day--range-start):not(.react-datepicker__day--range-end).react-datepicker__day--sat::after,
     [aria-label="day-9"].react-datepicker__day--in-range:not(.react-datepicker__day--range-start):not(.react-datepicker__day--range-end).react-datepicker__day--sat::after {
-        width: 2.65rem;
+        width: 3.55rem;
     }
         
     .react-datepicker__day--range-end::after {
@@ -525,8 +525,7 @@ $width: 280px;
     }
 
     .react-datepicker__day-name, .react-datepicker__day--outside-month {
-        color: #262626;
-        opacity: 0.5;
+        color: #939393;
     }
 
     .react-datepicker__day-name {
