outer-node styling

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -671,9 +671,9 @@
         font-size: $message_font_size;
         // background-color: #3F6DE1;
 
-        .wc-message-date &, .wc-message-handoff & {
-            padding:0 !important;
-        }
+        // .wc-message-date &, .wc-message-handoff & {
+        //     padding:0 !important;
+        // }
 
         .prefix__radio {
             display: block;
@@ -1118,6 +1118,11 @@
         padding: 5px 0px 0px 0px;
     }
 
+    .wc-message-content-date {
+        box-shadow: $gideon-shadow;
+        padding: 5px 0px 0px 0px;
+    }
+
     .wc-message-from-me {
       background-color:white;
     //   border-top: 5px solid #3f6de1;
@@ -1207,6 +1212,12 @@
       border: none;
       width: $gideon-node-width
     }
+
+    .wc-message-date {
+        margin-left: auto;
+        border: none;
+        width: $gideon-node-width
+      }
 
     .wc-message-imBack {
       margin-left: auto;
